--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "url": "https://github.com/wbreakell/changeover.git"
   },
   "author": "Walter Breakell <walterjbreakell@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
