--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
