--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "file-loader": "^0.10.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
