--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Walter Breakell <walterjbreakell@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
