--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "file-loader": "^0.10.0",
+    "rimraf": "^2.6.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
