Add 'clean' script to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Walter Breakell <walterjbreakell@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf dist",
     "start": "webpack-dev-server",
     "build": "webpack -p"
   },
