--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "start": "webpack-dev-server",
+    "prebuild": "yarn run clean",
     "build": "webpack -p"
   },
   "dependencies": {
