--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.3.2",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "file-loader": "^0.10.0",
+    "jest": "^19.0.0",
     "rimraf": "^2.6.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
