--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,10 @@
       }
     }],
     "react"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
