--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.23.0",
     "file-loader": "^0.10.0",
     "jest": "^19.0.0",
+    "prettier": "^0.20.0",
     "rimraf": "^2.6.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
