--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
+    "format": "prettier --single-quote --write 'src/**/*.js'",
     "start": "webpack-dev-server",
     "prebuild": "yarn run clean",
     "build": "webpack -p",
