--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "file-loader": "^0.10.0",
+    "husky": "^0.13.1",
     "jest": "^19.0.0",
     "prettier": "^0.20.0",
     "rimraf": "^2.6.0",
