--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prebuild": "yarn run clean",
     "build": "webpack -p",
     "test": "jest",
+    "coverage": "jest --coverage",
     "precommit": "yarn run format"
   },
   "dependencies": {
