--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "styled-components": "^1.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
