--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "file-loader": "^0.11.1",
+    "flow-bin": "^0.46.0",
     "husky": "^0.13.1",
     "jest": "^20.0.0",
     "prettier": "^1.3.1",
