--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
+    "redux-promise": "^0.5.3",
     "styled-components": "^1.4.6"
   },
   "devDependencies": {
