--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,6 @@
 {
   "presets": [
-    ["latest", {
-      "es2015": {
-        "modules": false
-      }
-    }],
+    ["env", {"modules": false}],
     "react"
   ],
   "env": {
