--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.0",
     "babel-loader": "^7.0.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.5.0",
     "babel-preset-react": "^6.24.1",
     "file-loader": "^0.11.1",
     "flow-bin": "^0.46.0",
