--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^1.11.1",
     "rimraf": "^2.6.1",
     "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1"
   }
 }
