--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-promise": "^0.6.0",
-    "styled-components": "^3.4.1"
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -40,12 +40,12 @@
     "babel-loader": "^8.0.2",
     "file-loader": "^2.0.0",
     "flow-bin": "^0.81.0",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.15",
     "jest": "^23.6.0",
-    "prettier": "^1.14.0",
-    "rimraf": "^2.6.1",
+    "prettier": "^1.14.3",
+    "rimraf": "^2.6.2",
     "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.9"
   }
 }
