--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-loader": "^8.0.2",
     "file-loader": "^2.0.0",
     "flow-bin": "^0.81.0",
-    "husky": "^1.0.0-rc.15",
+    "husky": "^1.0.1",
     "jest": "^23.6.0",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
